# dux

./: .dockerignore  .env.example  .env_old  .gitignore  AGENTS.md  CSS_ANALYSIS_REPORT.md  Dockerfile  README.md  docker-compose.yml  main.py  pubspec.yaml  pyproject.toml  run.bat  run.sh
.github/workflows/: docker-build-push.yml  e2e-tests.yml
android/app/: build.gradle.kts
database/: db.py
docs/: PROFILE_SETUP.md
dux-docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
dux-front/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
dux-front/src/: App.tsx  AuthPage.tsx  Home.tsx  JobSearch.tsx  LinkedInCallback.tsx  OrientationAdvisor.tsx  PrivacyPolicy.tsx  ProfileHub.tsx  ProfileSetup.tsx  RequireAuth.tsx  Settings.tsx  Upload.tsx  WikiMetier.tsx  main.tsx  neo-brutalism.css
dux-front/tests/: api.spec.ts  auth-flow.spec.ts  auth.spec.ts  navigation.spec.ts  settings.spec.ts  upload.spec.ts
dux.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
linux/: CMakeLists.txt
linux/runner/: my_application.cc
routers/: candidats.py  jobs.py  users.py
scripts/: create_test_users.py  import_offres_ft.py
server/: api.py  app.py  auth_api.py  config.py  database.py  dependencies.py  models.py  pull_france_travail.py  scheduler.py  test_auth_api.py  thread_pool.py  validators.py
server/cv/: __init__.py  (+7 more)
services/: ai_engine.py  matching_engine.py
static/: index.html
test/: widget_test.dart
web/: index.html
windows/: CMakeLists.txt
(+119 files in other folders)
